# ArcVideoFoundation

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md
.github/workflows/: codeql.yml  lint.yml  linux-ci.yml  update-registry.yml  windows-ci.yml
cmake/: arcvideo-foundation-config.cmake.in
docs/: BUILD_GUIDE.md
include/arcvideo/foundation/: foundation.h
include/arcvideo/foundation/render/: audioparams.h  pixelformat.h  samplebuffer.h  sampleformat.h
include/arcvideo/foundation/util/: bezier.h  color.h  cpuoptimize.h  log.h  math.h  rational.h  sse2neon.h  stringutils.h  tests.h  timecodefunctions.h  timerange.h  value.h
src/render/: audioparams.cpp  samplebuffer.cpp
src/util/: bezier.cpp  color.cpp  rational.cpp  stringutils.cpp  tests.cpp  timecodefunctions.cpp  timerange.cpp  value.cpp
